--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskTracker</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>TaskTracker</h1>
-    <input type="text" name="" id="textInput" placeholder="Add task in list">
-    <button id="submitButton"><i class="bi bi-plus"> </i>Add</button>
-    <ol id="data"></ol>
+    <div class="inputTasks">
+        <input type="text" name="" id="textInput" placeholder="Add task in list">
+        <button id="submitButton"><i class="bi bi-plus"> </i>Add</button>
+    </div>
 
-    <div class="items" id="items" >  </div>
+    <div class="items" id="items"> </div>
 
     <script src="script.js"> </script>
 </body>
+
 </html>
